# kit-static-scgi

./: CMakeLists.txt
src/: common.c  common.h  exec.c  exec.h  main.c  mimedb.c  mimedb.h  tcp.c  tcp.h  unix.c  unix.h  version.c  version.h  xattr.c  xattr.h
